# RAG-Project

./: Invoking_without_lcel.py  README.md  ingestion.py  invoking_with_lcel.py  pyproject.toml  rag_without_integrated_embeddings.py
